# expression-parser

./: .gitignore  CMakeLists.txt  README.md  evalparser.cpp  evalparser.hpp
.github/workflows/: cmake-multi-platform.yml  cmake_ci_cd.yml
tests/: CMakeLists.txt  gtest_main.cpp
